# alfalfa-client

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CHANGELOG.md  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: release.yml
.github/workflows/: build.yml  ci.yml  documentation.yml  integration.yml  pr-labels.yml  pypi_release.yml
alfalfa_client/: __init__.py  alfalfa_client.py  lib.py
docs/: conf.py  index.rst
pacer_client/: __init__.py  lib.py  pacer_client.py
tests/: conftest.py  test_aliases.py
tests/integration/: conftest.py  test_api.py  test_small_office.py
tests/integration/models/small_office/measures/alfalfa_vars/: measure.rb
