[tool.poetry]
name = "pacer-client"
version = "1.0.0"
description = "A standalone client for the NREL Alfalfa application"
authors = [
    'Kyle Benne <kyle.benne@nrel.gov>',
    'Brian Ball <brian.ball@nrel.gov>',
    'Cory Mosiman <cory.mosiman@nrel.gov>',
    'Nicholas Long <nicholas.long@nrel.gov>',
    'Willy Bernal <willy.bernalheredia@nrel.gov>',
    'Yanfei Li <yanfei.li@nrel.gov>',
    'Tobias Shapinsky <tobias.shapinsky@nrel.gov>'
]
readme = 'README.md'
license = 'LICENSE.txt'
# `alfalfa_client` is a backwards-compatibility shim re-exporting `pacer_client`
# (see alfalfa_client/__init__.py). Both packages ship in every distribution so
# `pacer-client` and `alfalfa-client` installs stay import-compatible during the
# rename transition.
packages = [
    { include = "pacer_client" },
    { include = "alfalfa_client" },
]

[tool.poetry.dependencies]
python = ">=3.10"

requests-toolbelt = "~1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.21.2,<8.0.0"
sphinx = ">=6.1.3,<9.0.0"
pre-commit = ">=2.21,<4.7"
pytest = ">=7.2,<9.2"
ruff = "^0.15.22"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
